--- a/P7_05_datadrift.ipynb
+++ b/P7_05_datadrift.ipynb
@@ -32,12 +32,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "4aec7c05-6401-42c1-82ee-469538baacf3",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/raquelsp/anaconda3/lib/python3.11/site-packages/umap/distances.py:1063: NumbaDeprecationWarning: \u001b[1mThe 'nopython' keyword argument was not supplied to the 'numba.jit' decorator. The implicit default value for this argument is currently False, but it will be changed to True in Numba 0.59.0. See https://numba.readthedocs.io/en/stable/reference/deprecation.html#deprecation-of-object-mode-fall-back-behaviour-when-using-jit for details.\u001b[0m\n",
+      "  @numba.jit()\n",
+      "/home/raquelsp/anaconda3/lib/python3.11/site-packages/umap/distances.py:1071: NumbaDeprecationWarning: \u001b[1mThe 'nopython' keyword argument was not supplied to the 'numba.jit' decorator. The implicit default value for this argument is currently False, but it will be changed to True in Numba 0.59.0. See https://numba.readthedocs.io/en/stable/reference/deprecation.html#deprecation-of-object-mode-fall-back-behaviour-when-using-jit for details.\u001b[0m\n",
+      "  @numba.jit()\n",
+      "/home/raquelsp/anaconda3/lib/python3.11/site-packages/umap/distances.py:1086: NumbaDeprecationWarning: \u001b[1mThe 'nopython' keyword argument was not supplied to the 'numba.jit' decorator. The implicit default value for this argument is currently False, but it will be changed to True in Numba 0.59.0. See https://numba.readthedocs.io/en/stable/reference/deprecation.html#deprecation-of-object-mode-fall-back-behaviour-when-using-jit for details.\u001b[0m\n",
+      "  @numba.jit()\n",
+      "/home/raquelsp/anaconda3/lib/python3.11/site-packages/umap/umap_.py:660: NumbaDeprecationWarning: \u001b[1mThe 'nopython' keyword argument was not supplied to the 'numba.jit' decorator. The implicit default value for this argument is currently False, but it will be changed to True in Numba 0.59.0. See https://numba.readthedocs.io/en/stable/reference/deprecation.html#deprecation-of-object-mode-fall-back-behaviour-when-using-jit for details.\u001b[0m\n",
+      "  @numba.jit()\n"
+     ]
+    }
+   ],
    "source": [
     "# File system management\n",
     "import sys\n",
@@ -77,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "8689809f-478f-4c5b-b8b3-5bfc767b3bfe",
    "metadata": {},
    "outputs": [
@@ -86,11 +101,10 @@
      "output_type": "stream",
      "text": [
       "Version of used libraries :\n",
-      "Python    : 3.9.13 (main, Aug 25 2022, 23:26:10) \n",
-      "[GCC 11.2.0]\n",
+      "Python    : 3.11.3 (main, Apr 19 2023, 23:54:32) [GCC 11.2.0]\n",
       "NumPy     : 1.24.3\n",
       "Pandas    : 1.5.3\n",
-      "Evidently : 0.3.3\n"
+      "Evidently : 0.4.0\n"
      ]
     }
    ],
@@ -128,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "33f889e2-8da6-48e7-a4aa-dd3b52e4a9a3",
    "metadata": {},
    "outputs": [],
@@ -145,36 +159,6 @@
     "# Define training set size\n",
     "TRAIN_SIZE = 0.8\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bb1d7b2b-b866-4766-9ebb-f0646c91628b",
-   "metadata": {
-    "id": "3636cd2d-4cca-4fd0-994f-6d2127264be4"
-   },
-   "source": [
-    "\n",
-    "<a id='USED_FUNCTIONS'></a>\n",
-    "\n",
-    "\n",
-    "<br>\n",
-    "\n",
-    "\n",
-    "---\n",
-    "---\n",
-    "\n",
-    "<font size=\"+1\"> **FUNCTIONS USED IN THIS NOTEBOOK** </font>\n",
-    "\n",
-    "---\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "41383694-c4b2-4426-be4a-dd51a808d290",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -200,48 +184,12 @@
     "\n",
     "## <font color = '#0085dd'>**Table of content**</font>\n",
     "\n",
-    "\n",
-    "[Librairies loading](#LOADING_LIBRARIES)<br>\n",
-    "\n",
-    "[Functions used in this notebook](#USED_FUNCTIONS)<br>\n",
-    "\n",
     "---\n",
     "\n",
-    "[**Datasets**](#datasets)\n",
-    " * [Description](#datasets_description)\n",
-    "   * [orders_dataset](#orders_dataset)\n",
-    "   * [customers_dataset](#customers_dataset)\n",
-    "   * [order_items](#order_items)\n",
-    "   * [products_dataset](#products_dataset)\n",
-    "   * [product_category_name_translation](#product_category_name_translation)\n",
-    "   * [sellers_dataset](#sellers_dataset)\n",
-    "   * [order_payments](#order_payments)\n",
-    "   * [order_reviews](#order_reviews)\n",
-    "   * [geolocation_dataset](#geolocation_dataset)<br>\n",
-    "<br>\n",
-    " * [Columns preparation](#columns_preparation)\n",
-    "   * [Zip codes centroids calculation](#centroid_zipCode)\n",
-    "   * [Product category check and update](#cat_products)\n",
     "\n",
-    "\n",
-    "[**Datasets joining**](#datasets_joining)\n",
-    " * [Data description](#data_description)\n",
-    " * [Evaluation of missing values](#missing_values)\n",
-    " * [Column filling analysis](#column_fill)\n",
-    " * [Row filling analysis](#row_filling)\n",
-    " * [Features pre-selection](#features_preSelection)\n",
-    "\n",
-    "[**Features engineering**](#features_engineering)\n",
-    " * [Customers spatial distribution](#customers_spatial_distribution)\n",
-    " * [RFM features](#RFM_features)\n",
-    " * [Products](#products)\n",
-    " * [Orders](#Orders)\n",
-    " * [Dates](#dates)\n",
-    " * [Joining customers information](#join_customers_datasets)\n",
-    " * [Features analysis](#features_analysis)\n",
-    "\n",
-    "[**Dataset for segmentation**](#segmentation_dataset)\n",
-    "<br>\n",
+    "[**Loading datasets**](#datasets_loading)\n",
+    " * [Data preparation](#data_preparation)\n",
+    " * [Datadrift analysis](#data_drift_analysis)\n",
     "\n",
     "---\n"
    ]
@@ -264,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "f946dabd-ea06-4aa5-9b87-ad781a4df975",
    "metadata": {
     "executionInfo": {
@@ -289,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "c0c121fc-cfbf-4f6a-a2f9-3508db059b4b",
    "metadata": {
     "executionInfo": {
@@ -345,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "7541f00b-d9f8-4927-a89c-12d0c34d630e",
    "metadata": {},
    "outputs": [
@@ -387,113 +335,113 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>SK_ID_CURR</td>\n",
-       "      <td>int32</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>307511.0</td>\n",
-       "      <td>278180.518577</td>\n",
-       "      <td>102790.175348</td>\n",
-       "      <td>100002.0</td>\n",
-       "      <td>189145.5</td>\n",
-       "      <td>278202.0</td>\n",
-       "      <td>367142.5</td>\n",
-       "      <td>456255.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>INTEREST_SHARE_MEAN_FIRST_2</td>\n",
+       "      <th>0</th>\n",
+       "      <td>AMT_CREDIT</td>\n",
        "      <td>float32</td>\n",
        "      <td>0</td>\n",
-       "      <td>301202</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>307511.0</td>\n",
-       "      <td>-0.0</td>\n",
-       "      <td>0.999843</td>\n",
-       "      <td>-4.486805</td>\n",
-       "      <td>-0.258287</td>\n",
-       "      <td>0.06835</td>\n",
-       "      <td>0.440544</td>\n",
-       "      <td>5.295004</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>EXT_SOURCE_MEAN</td>\n",
-       "      <td>float32</td>\n",
-       "      <td>0</td>\n",
-       "      <td>305131</td>\n",
+       "      <td>301908</td>\n",
        "      <td>100.0</td>\n",
        "      <td>307511.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.999934</td>\n",
-       "      <td>-4.511773</td>\n",
-       "      <td>-0.648111</td>\n",
-       "      <td>0.092637</td>\n",
-       "      <td>0.706916</td>\n",
-       "      <td>3.164031</td>\n",
+       "      <td>1.00001</td>\n",
+       "      <td>-1.376496</td>\n",
+       "      <td>-0.817476</td>\n",
+       "      <td>-0.212415</td>\n",
+       "      <td>0.520818</td>\n",
+       "      <td>8.574059</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>INTEREST_SHARE_MEAN_LAST_5</td>\n",
+       "      <th>24</th>\n",
+       "      <td>EXT_SOURCE_1</td>\n",
        "      <td>float32</td>\n",
        "      <td>0</td>\n",
-       "      <td>293183</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>307511.0</td>\n",
-       "      <td>-0.0</td>\n",
-       "      <td>0.999778</td>\n",
-       "      <td>-3.572714</td>\n",
-       "      <td>-0.270322</td>\n",
-       "      <td>0.085896</td>\n",
-       "      <td>0.466777</td>\n",
-       "      <td>5.512062</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>DAYS_ID_PUBLISH</td>\n",
-       "      <td>float32</td>\n",
-       "      <td>0</td>\n",
-       "      <td>301343</td>\n",
+       "      <td>192927</td>\n",
        "      <td>100.0</td>\n",
        "      <td>307511.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.999971</td>\n",
-       "      <td>-2.784328</td>\n",
-       "      <td>-0.86442</td>\n",
-       "      <td>-0.172114</td>\n",
-       "      <td>0.844151</td>\n",
-       "      <td>1.983641</td>\n",
+       "      <td>0.99995</td>\n",
+       "      <td>-3.513017</td>\n",
+       "      <td>0.012103</td>\n",
+       "      <td>0.012103</td>\n",
+       "      <td>0.012103</td>\n",
+       "      <td>3.288063</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>CREDIT_ANNUITY_RATIO</td>\n",
+       "      <td>float32</td>\n",
+       "      <td>0</td>\n",
+       "      <td>268417</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>307511.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.000057</td>\n",
+       "      <td>-1.953928</td>\n",
+       "      <td>-0.766587</td>\n",
+       "      <td>-0.206075</td>\n",
+       "      <td>0.701369</td>\n",
+       "      <td>4.850109</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>REGION_POPULATION_RELATIVE</td>\n",
+       "      <td>float32</td>\n",
+       "      <td>0</td>\n",
+       "      <td>307430</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>307511.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.999912</td>\n",
+       "      <td>-1.487798</td>\n",
+       "      <td>-0.785331</td>\n",
+       "      <td>-0.145909</td>\n",
+       "      <td>0.56357</td>\n",
+       "      <td>3.733564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>CURRENT_DEBT_TO_CREDIT_RATIO_MEAN_CREDITACTIVE...</td>\n",
+       "      <td>float32</td>\n",
+       "      <td>0</td>\n",
+       "      <td>303514</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>307511.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.999875</td>\n",
+       "      <td>-268.487915</td>\n",
+       "      <td>-0.016791</td>\n",
+       "      <td>-0.016791</td>\n",
+       "      <td>-0.016791</td>\n",
+       "      <td>207.717712</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       Variable     Type null Duplicated Filling percentage  \\\n",
-       "34                   SK_ID_CURR    int32    0          0              100.0   \n",
-       "11  INTEREST_SHARE_MEAN_FIRST_2  float32    0     301202              100.0   \n",
-       "18              EXT_SOURCE_MEAN  float32    0     305131              100.0   \n",
-       "10   INTEREST_SHARE_MEAN_LAST_5  float32    0     293183              100.0   \n",
-       "23              DAYS_ID_PUBLISH  float32    0     301343              100.0   \n",
+       "                                             Variable     Type null  \\\n",
+       "0                                          AMT_CREDIT  float32    0   \n",
+       "24                                       EXT_SOURCE_1  float32    0   \n",
+       "29                               CREDIT_ANNUITY_RATIO  float32    0   \n",
+       "19                         REGION_POPULATION_RELATIVE  float32    0   \n",
+       "5   CURRENT_DEBT_TO_CREDIT_RATIO_MEAN_CREDITACTIVE...  float32    0   \n",
        "\n",
-       "       count           mean            std       min       25%       50%  \\\n",
-       "34  307511.0  278180.518577  102790.175348  100002.0  189145.5  278202.0   \n",
-       "11  307511.0           -0.0       0.999843 -4.486805 -0.258287   0.06835   \n",
-       "18  307511.0            0.0       0.999934 -4.511773 -0.648111  0.092637   \n",
-       "10  307511.0           -0.0       0.999778 -3.572714 -0.270322  0.085896   \n",
-       "23  307511.0            0.0       0.999971 -2.784328  -0.86442 -0.172114   \n",
+       "   Duplicated Filling percentage     count mean       std         min  \\\n",
+       "0      301908              100.0  307511.0  0.0   1.00001   -1.376496   \n",
+       "24     192927              100.0  307511.0  0.0   0.99995   -3.513017   \n",
+       "29     268417              100.0  307511.0  0.0  1.000057   -1.953928   \n",
+       "19     307430              100.0  307511.0  0.0  0.999912   -1.487798   \n",
+       "5      303514              100.0  307511.0  0.0  0.999875 -268.487915   \n",
        "\n",
-       "         75%       max  \n",
-       "34  367142.5  456255.0  \n",
-       "11  0.440544  5.295004  \n",
-       "18  0.706916  3.164031  \n",
-       "10  0.466777  5.512062  \n",
-       "23  0.844151  1.983641  "
+       "         25%       50%       75%         max  \n",
+       "0  -0.817476 -0.212415  0.520818    8.574059  \n",
+       "24  0.012103  0.012103  0.012103    3.288063  \n",
+       "29 -0.766587 -0.206075  0.701369    4.850109  \n",
+       "19 -0.785331 -0.145909   0.56357    3.733564  \n",
+       "5  -0.016791 -0.016791 -0.016791  207.717712  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "d26eec4c-109e-4c4f-84a4-0de701e089c2",
    "metadata": {},
    "outputs": [
@@ -529,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "1f34cfca-5d4f-4c02-967d-21704a98bd9d",
    "metadata": {},
    "outputs": [],
@@ -543,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "6d00c91f-5d2b-4195-a530-41d4d9de9014",
    "metadata": {},
    "outputs": [
@@ -551,8 +499,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reference(307511, 33)\n",
-      "Current(48744, 33)\n"
+      "Reference(307511, 34)\n",
+      "Current(48744, 34)\n"
      ]
     }
    ],
@@ -581,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "603e52b3-a2e7-42f3-82a9-9244c03055d5",
    "metadata": {},
    "outputs": [],
@@ -592,24 +540,8 @@
     "feng_report.run(reference_data=reference_fe_10000,\n",
     "                current_data=current_fe_10000)\n",
     "\n",
-    "feng_report.save_html('feng_report10000.html')"
+    "feng_report.save_html('feng_report10001.html')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3dc0ca76-34a3-429c-bf2a-5ece74cb11e9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "66e23a24-dcfb-4fcf-8c3e-f5c0895ee2d4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -628,7 +560,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.3"
   },
   "toc-autonumbering": true
  },
